--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: workshop
 root: .
-venue: FIXME      # brief name of host site without address (e.g., "Euphoric State University")
-address: FIXME    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: FIXME    # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: FIXME   # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: FIXME     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: FIXME  # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: FIXME  # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME  # use YYYY-MM-DD format like "2015-01-01"
-enddate: FIXME    # use YYYY-MM-DD format like" 2015-01-02"
-instructor: FIXME # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: FIXME     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: FIXME    # contact email address for workshop organizer, such as "grace@hopper.org"
+venue: "Scripting Carpentry"
+address: Puget Sound Regional Council, 1011 Western Ave, Suite 500, Seattle WA
+country: us    # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+language: en   # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: 47.6054148,-122.337372     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+humandate: "December, 2015"
+humantime: "12:30 pm - 4:30 pm daily"
+startdate: "2015-12-15"  # use YYYY-MM-DD format like "2015-01-01"
+enddate: "2015-12-16"    # use YYYY-MM-DD format like" 2015-01-02"
+instructor: ["Billy Charlton", "Peter&nbsp;Caballero", "Suzanne&nbsp;Childress", "Brice&nbsp;Nichols", "Hana&nbsp;Ševčíková", "Stefan&nbsp;Coe"]
+helper: ['TBD']
+contact: "bcharlton@psrc.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
@@ -52,21 +52,16 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission
+  This course is based on materials produced by <a href="{{site.swc_site}}">Software Carpentry</a>. Software Carpentry's mission
   is to help scientists and engineers get more research done in less
   time and with less pain by teaching them basic lab skills for
-  scientific computing.  This hands-on workshop will cover basic
+  scientific computing. We can't call this a Software Carpentry course, however, because they provide the materials freely but hang on to the copyright.
+</p>
+<p>This hands-on workshop will cover basic
   concepts and tools, including program design, version control, data
-  management, and task automation.  Participants will be encouraged to
+  management, and task automation. Participants will be encouraged to
   help one another and to apply what they have learned to their own
   research problems.
-</p>
-<p align="center">
-  <em>
-    For more information on what we teach and why,
-    please see our paper
-    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
-  </em>
 </p>
 
 <!--
@@ -77,9 +72,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 -->
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
-  <strong>You don't need to have any previous knowledge of the tools that will
-    be presented at the workshop.</strong>
+  The course is aimed at practitioners, researchers and data scientists in any technical field. <i>You don't need to have any previous knowledge of the tools that will
+    be presented at the workshop.</i>
 </p>
 
 <!--
@@ -109,8 +103,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 <p id="requirements">
   <strong>Requirements:</strong> Participants must bring a laptop with
   a few specific software packages installed (listed
-  <a href="#setup">below</a>). They are also required to abide by
-  Software Carpentry's
+  <a href="#setup">below</a>). They are also required to abide by the
+  Software Carpentry
   <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
 </p>
 
@@ -144,30 +138,103 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 <h2 id="schedule">Schedule</h2>
 
 <div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
+  <div class="col-md-4">
+    <h3>Day 1:<br/>Command-Line Ninja</h3>
     <table class="table table-striped">
       <tr> <td>Arrival</td>  <td><a href='{{ site.swc_pre_survey }}{{ site.github.project_title }}'>Pre-workshop Survey</a></td> </tr>
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>12:30pm</td> <td>Introducing the Unix Shell
+            <br/>Files and Directories
+            <br/>Pipes and Filters</td> </tr>
+      <tr> <td>2:00pm</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15pm</td>  <td>Looping
+            <br/>Shell Scripts
+            <br/>Finding Things</td> </tr>
+      <tr> <td>4:00pm</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
+  <div class="col-md-4">
+    <h3>Day 2:<br/>Git Version Control</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>Dismissal</td>  <td><a href='{{ site.swc_post_survey }}{{ site.github.project_title }}'>Post-workshop Survey</a></td> </tr>
+      <tr> <td>12:30pm</td> <td>Setting up Git
+            <br/>Creating a Repository
+            <br/>Tracking Changes
+            <br/>Exploring History
+            <br/>Ignoring Things</td> </tr>
+      <tr> <td>2:00pm</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15pm</td>  <td>Remotes in GitHub
+            <br/>Collaborating with Others
+            <br/>Resolving Conflicts</td> </tr>
+      <tr> <td>4:00pm</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
+  <div class="col-md-4">
+    <h3>Day 3:<br/>Python Wrangling</h3>
+    <table class="table table-striped">
+      <tr> <td>12:30pm</td> <td>Analyzing Data
+            <br/>Repeating Actions with Loops
+            <br/>Multiple Values and Lists
+            <br/>Making Choices </td> </tr>
+      <tr> <td>2:00pm</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15pm</td>  <td>Creating Functions
+            <br/>Errors and Exceptions
+            <br/>Defensive Programming and Debugging</td> </tr>
+      <tr> <td>4:00pm</td>  <td>Wrap-up</td> </tr>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Day 4:<br/>Managing Data with SQL</h3>
+    <table class="table table-striped">
+      <tr> <td>12:30pm</td>
+        <td>Selecting Data
+            <br/>Sorting and Removing Duplicates
+            <br/>Filters
+            <br/>Calculating New Values
+            <br/>Missing Data
+        </td> </tr>
+      <tr> <td>2:00pm</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15pm</td>
+        <td>Aggregation and Combining Data
+            <br/>Data Hygiene
+            <br/>Creating and Modifying Data
+            <br/>Python and Databases
+        </td> </tr>
+      <tr> <td>4:00pm</td>  <td>Wrap-up</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-4">
+    <h3>Day 5:<br/>Automation and Make</h3>
+    <table class="table table-striped">
+      <tr> <td>12:30pm</td> <td>Introducing Make
+            <br/>Makefiles and Automatic Variables
+            <br/>Dependencies on Data and Code</td> </tr>
+      <tr> <td>2:00pm</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15pm</td>  <td>Pattern Rules
+            <br/>Variables and Functions</td> </tr>
+      <tr> <td>4:00pm</td>  <td>Post-Workshop Survey</td> </tr>
+    </table>
+  </div>
+  <div class="col-md-4">
+    <h3>Bonus Day:<br/>R for Data Analysis</h3>
+    <table class="table table-striped">
+      <tr> <td>12:30pm</td> <td>Introducing R and RStudio
+            <br/>Data structures, data frames, and reading data
+            <br/>Subsetting Data
+            <br/>Creating functions
+            <br/>Creating graphics
+            <br/>Vectorization</td> </tr>
+      <tr> <td>2:00pm</td>  <td>Coffee</td> </tr>
+      <tr> <td>2:15pm</td>  <td>Control flow
+            <br/>Writing Data
+            <br/>Split-apply-combine
+            <br/>Dataframe manipulation with dplyr
+            <br/>Dataframe manipulation with tidyr
+          </td> </tr>
+      <tr> <td>4:00pm</td>  <td>Wrap-up</td> </tr>
+    </table>
+  </div>
+
 </div>
 
 <!--
@@ -325,6 +392,9 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <a href = "https://github.com/swcarpentry/workshop-template/wiki/Configuration-Problems-and-Solutions">Configuration Problems and Solutions wiki page</a>.
 </p>
 
+
+<hr/>
+
 <div id="shell"> <!-- Start of 'shell' section. -->
   <h3>The Bash Shell</h3>
 
@@ -404,6 +474,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </div>
 </div> <!-- End of 'shell' section. -->
 
+<hr/>
+
 <div id='git'> <!-- Start of 'Git' section. GitHub browser compatability
            is given at https://help.github.com/articles/supported-browsers/-->
   <h3>Git</h3>
@@ -451,6 +523,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </div>
 </div> <!-- End of 'Git' section. -->
 
+<hr/>
 <div id="editor"> <!-- Start of 'editor' section. -->
   <h3>Text Editor</h3>
 
@@ -511,6 +584,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </div>
 </div> <!-- End of 'editor' section. -->
 
+<hr/>
 <div id="python"> <!-- Start of 'Python' section. Remove the third paragraph if
            the workshop will teach Python using something other than
            the IPython notebook.
@@ -596,6 +670,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </p>
 </div> <!-- End of 'Python' section. -->
 
+<hr/>
 <div id="r"> <!-- Start of 'R' section. -->
   <h3>R</h3>
 
@@ -641,6 +716,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </div>
 </div> <!-- End of 'R' section. -->
 
+<hr/>
 <div id="sql"> <!-- Start of 'SQLite' section. -->
   <h3>SQLite</h3>
 
